react components - form - can't access property

--- a/views/details.ejs
+++ b/views/details.ejs
@@ -7,7 +7,7 @@
         <div class="wrap">
           <h1>Details</h1>
           <hr />
-          <h4><a href="/">Back to Titans</a></h4>
+          <aside><button onclick="window.location.href='/'">Back to Titans</button></aside>
   
           <h3><%= result.name %></h3>
           <p>Strength: <b><%= result.str %></b></p>
