--- a/views/home_react.ejs
+++ b/views/home_react.ejs
@@ -67,7 +67,7 @@
             console.log(event.target.innerText)
             console.log(event.target.id)
 
-            // does this title object have ties to my detail? tried changing to name.
+            // is this the source of my issue? tried changing to everything name/title also.
             let title = event.target.innerText
             let newTitan = this.state.titans.find((titansModel) => titansModel.name == name)
             this.setState({"currentTitan": newTitan})
